# creature

./: CMakeLists.txt  LICENSE  README.md
cmake/: Resources.cmake
src/: creature.h
src/compute/: CMakeLists.txt  compute.c  compute.h
src/compute/cl/: cl.c  matrix.cl  vector.cl
src/host/: host.h
src/model/: model.h
src/net/: net.h
tests/: CMakeLists.txt  hello_world.c
